<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForYou.ForYouFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:id="@+id/mainrel">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Good Morning!"
        android:fontFamily="@font/spd_semibold"
        android:textSize="24dp"
        android:textColor="@color/navyBlueText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/greeting_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Khushboo Gandhi"
        android:fontFamily="@font/spd_regular"
        android:textSize="24dp"
        android:layout_below="@id/greeting_text"
        android:textColor="@color/navyBlueText"
        android:layout_marginStart="16dp"
        android:id="@+id/name_text"/>

    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        android:src="@drawable/ic_default_profile_image"
        android:id="@+id/img_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todays_text"
        android:fontFamily="@font/spd_regular"
        android:textSize="16dp"
        android:layout_below="@id/name_text"
        android:textColor="@color/grey"
        android:layout_marginStart="16dp"
        android:id="@+id/todays_text"/>




    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/todays_text"
        android:id="@+id/activity_grid">

        <RelativeLayout
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:minWidth="165dp"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/walking_box_for_you"
            android:id="@+id/walking_box">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_walking"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/walking_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/walking_image"
                android:text="@string/walking_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:transitionName="@string/transition_walking"
                android:id="@+id/walking_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/walking_text"
                android:text="690"
                android:fontFamily="@font/spd_semibold"
                android:textSize="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/steps_value_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_value_text"
                android:text="@string/steps_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightPurpleText"
                android:id="@+id/steps_text"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/steps_text"
                android:text="@string/walking_target_text"
                android:fontFamily="@font/spd_semibold"
                android:lines="2"
                android:textSize="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightPurpleText"
                android:layout_marginBottom="12dp"
                android:id="@+id/target_text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="10dp"
            android:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:minWidth="165dp"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/heartbeat_box_for_you"
            android:id="@+id/heartbeat_box">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heartbeat"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/heartbeat_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/heartbeat_image"
                android:text="@string/heartbeat_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:transitionName="@string/transition_heartbeat"
                android:id="@+id/heartbeat_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/heartbeat_text"
                android:text="75"
                android:fontFamily="@font/spd_semibold"
                android:textSize="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/heartbeat_value_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/heartbeat_value_text"
                android:text="@string/bpm_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightOrangeText"
                android:id="@+id/bpm_text"
                />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/bpm_text"
                android:text="@string/last_checked_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightOrangeText"
                android:layout_marginBottom="16dp"
                android:id="@+id/last_checked_text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:minWidth="165dp"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/calories_box_for_you"
            android:id="@+id/calories_box">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calories"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/calories_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_image"
                android:text="@string/calories_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:transitionName="@string/transition_calories"
                android:id="@+id/calories_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_text"
                android:text="2250"
                android:fontFamily="@font/spd_semibold"
                android:textSize="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/calories_value_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_value_text"
                android:text="@string/kcal_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightYellowText"
                android:id="@+id/kcal_text"
                />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/kcal_text"
                android:text="@string/calories_target_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightYellowText"
                android:layout_marginBottom="16dp"
                android:id="@+id/calories_target_text"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:minWidth="165dp"
            android:layout_height="wrap_content"
            android:minHeight="176dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="24dp"
            android:background="@drawable/blue_box_for_you"
            android:id="@+id/water_box">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_water"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:id="@+id/water_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/water_image"
                android:text="@string/water_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:transitionName="@string/transition_water"
                android:id="@+id/water_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/water_text"
                android:text="7"
                android:fontFamily="@font/spd_semibold"
                android:textSize="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/white"
                android:id="@+id/water_value_text"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/water_value_text"
                android:text="@string/glass_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightBlueText"
                android:id="@+id/glass_text"
                />

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/glass_text"
                android:text="@string/glass_info_text"
                android:fontFamily="@font/spd_semibold"
                android:textSize="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/lightBlueText"
                android:layout_marginBottom="16dp"
                android:id="@+id/glass_info_text"
                />


        </RelativeLayout>

    </GridLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_below="@id/activity_grid"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/period_box_for_you"
        android:id="@+id/period_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_period"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/period_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period_text"
            android:fontFamily="@font/spd_semibold"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:id="@+id/period_text"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="25 Days"
            android:fontFamily="@font/spd_semibold"
            android:textSize="30dp"
            android:layout_below="@id/period_text"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_marginBottom="12dp"
            android:id="@+id/period_value_text"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/period_layout"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/reminders_box_for_you"
        android:id="@+id/reminders_rel">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reminders"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/reminders_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_dose_text"
            android:fontFamily="@font/spd_semibold"
            android:textSize="20dp"
            android:layout_toRightOf="@id/reminders_image"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginStart="14dp"
            android:id="@+id/next_dose_text"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Morning, 8 am"
            android:fontFamily="@font/spd_semibold"
            android:textSize="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:id="@+id/reminder_time_text"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/reminders_image"
            android:scrollbars="vertical"
            android:id="@+id/reminders_recycler_view"/>

    </RelativeLayout>


    </RelativeLayout>
</ScrollView>



</RelativeLayout>